@@ -1,3 +1,6 @@
+Jeffrey Nelson - Fri Aug 12 2005
+	3G and later iPods turn off when battery is below 50 for 4 seconds.
+
 Jeffrey Nelson - Wed Aug 10 2005
 	Podzilla now asks if you want to reboot your iPod when there is 
 	FireWire connectivity for 1-3G iPods.
